Move output into tta consistent with others
Not sure what %tb is

--- a/Tutorial #3 - User Classes.ipynb
+++ b/Tutorial #3 - User Classes.ipynb
@@ -129,7 +129,7 @@
     "INPUT_DEMAND     = os.path.join(BASE_DIR,\"tta\",\"input\",\"demand-bigger\")\n",
     "\n",
     "OUTPUT_FOLDER    = r\"segmentation\"\n",
-    "OUTPUT_DIR       = os.path.join(BASE_DIR, \"output\")"
+    "OUTPUT_DIR       = os.path.join(BASE_DIR, \"tta\",\"output\")"
    ]
   },
   {
@@ -151,8 +151,7 @@
     "                  iters            = 3,\n",
     "                  overlap_variable = \"count\",\n",
     "                  dispersion       = 0.5,\n",
-    "                  capacity         = True)\n",
-    "%tb"
+    "                  capacity         = True)"
    ]
   },
   {
