Some fixes for Tutorial 4

--- a/Tutorial #4 - Create Your Own.ipynb
+++ b/Tutorial #4 - Create Your Own.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "import os,datetime\n",
+    "import os,datetime,shutil\n",
     "import pandas as pd"
    ]
   },
@@ -36,8 +36,8 @@
    "source": [
     "GTFS_LINK  = r\"http://admin.gotransitnc.org/sites/default/files/developergtfs/GoRaleigh_GTFS_0.zip\"\n",
     "\n",
-    "BASE_DIR   = r\"/Users/elizabeth/Documents/urbanlabs/MTC/SHRP2\"\n",
-    "NEW_FOLDER = \"RALEIGH_GTFS\"\n",
+    "BASE_DIR   = r\"C:\\Users\\lzorn\\Documents\\fast-trips-tutorial\"\n",
+    "NEW_FOLDER = \"GoRaleigh_GTFS\"\n",
     "GTFS_LOC   = os.path.join(BASE_DIR,NEW_FOLDER)"
    ]
   },
@@ -158,11 +158,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "OUTPUT_DIR      = os.path.join(BASE_DIR,\"GoRaleigh_GTFS_PLUS\")\n",
+    "GTFS_PLUS_LOC   = \"GoRaleigh_GTFS_PLUS\"\n",
+    "OUTPUT_DIR      = os.path.join(BASE_DIR,GTFS_PLUS_LOC)\n",
+    "\n",
+    "# start with the GTFS files if you don't have these already\n",
+    "try:\n",
+    "    shutil.copytree(GTFS_LOC, \"GoRaleigh_GTFS_PLUS\")\n",
+    "    # copy over the config file from the earlier tutorials\n",
+    "    shutil.copy(os.path.join(BASE_DIR,\"tta\",\"input\",\"demand-single\",\"config_ft.txt\"), \n",
+    "                os.path.join(OUTPUT_DIR, \"config_ft.txt\"))\n",
+    "except:\n",
+    "    # hopefully this is ok and you're just doing this multiple times\n",
+    "    pass\n",
+    "\n",
     "DEFAULT_MODE    = \"local_bus\"\n",
     "DEFAULT_VEHICLE = \"standard_bus\"\n",
     "SEATED_CAPACITY   = 30\n",
@@ -170,7 +182,7 @@
     "MAX_SPEED         = 45\n",
     "ACCELERATION      = 3\n",
     "DECELERATION      = 4\n",
-    "DWELL = r\"'3 + 2*[boards] + 1.5*[alights]'\""
+    "DWELL = r'\"3 + 2*[boards] + 1.5*[alights]\"'"
    ]
   },
   {
@@ -185,7 +197,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -294,8 +306,8 @@
     "\n",
     "with open(os.path.join(OUTPUT_DIR,'walk_access_ft.txt'),'wb') as f:\n",
     "    f.write(\"taz,stop_id,direction,dist\\n\")\n",
-    "    f.write(\"%s,%s,access,0.00\\n\" % (ORIGIN_STOP, ORIGIN_STOP))\n",
-    "    f.write(\"%s,%s,access,0.00\\n\" % (DESTINATION_STOP, DESTINATION_STOP))"
+    "    f.write(\"t_%s,%s,access,0.01\\n\" % (ORIGIN_STOP, ORIGIN_STOP))\n",
+    "    f.write(\"t_%s,%s,egress,0.01\\n\" % (DESTINATION_STOP, DESTINATION_STOP))"
    ]
   },
   {
@@ -308,7 +320,7 @@
    "source": [
     "with open(os.path.join(OUTPUT_DIR,'trip_list.txt'),'wb') as f:\n",
     "    f.write(\"person_id,person_trip_id,o_taz,d_taz,mode,purpose,departure_time,arrival_time,time_target,vot\\n\")\n",
-    "    f.write(\"Ms. Wuf,1,%s,%s,transit,appcon,7:00:00,8:00:00,departure,10\\n\" % (ORIGIN_STOP, ORIGIN_STOP))"
+    "    f.write(\"Tuffie,1,t_%s,t_%s,transit,appcon,7:00:00,8:00:00,departure,10\\n\" % (ORIGIN_STOP, DESTINATION_STOP))"
    ]
   },
   {
@@ -319,12 +331,12 @@
    },
    "outputs": [],
    "source": [
-    "ACCESS_WEIGHT = 2.0\n",
-    "EGRESS_WEIGHT = 2.0\n",
-    "WAIT_TIME_WEIGHT     = 2.0\n",
-    "IVT_WEIGHT    = 1.0\n",
-    "XFER_PEN_WEIGHT      = 5\n",
-    "XFER_WALK_WEIGHT     = 2\n",
+    "ACCESS_WEIGHT      = 2.0\n",
+    "EGRESS_WEIGHT      = 2.0\n",
+    "WAIT_TIME_WEIGHT   = 2.0\n",
+    "IVT_WEIGHT         = 1.0\n",
+    "XFER_PEN_WEIGHT    = 5\n",
+    "XFER_WALK_WEIGHT   = 2\n",
     "\n",
     "with open(os.path.join(OUTPUT_DIR,'pathweight_ft.txt'),'wb') as f:\n",
     "    f.write(\"user_class,purpose,demand_mode_type,demand_mode,supply_mode,weight_name,weight_value\\n\")\n",
@@ -365,7 +377,7 @@
     "INPUT_NETWORKS   = OUTPUT_DIR\n",
     "INPUT_DEMAND     = OUTPUT_DIR\n",
     "INPUT_WEIGHTS    = os.path.join(OUTPUT_DIR,'pathweight_ft.txt')\n",
-    "RUN_CONFIG       = os.path.join(OUTPUT_DIR,'config_ft.txt') #I just copied this here.\n",
+    "RUN_CONFIG       = os.path.join(OUTPUT_DIR,'config_ft.txt')\n",
     "OUTPUT_FOLDER    = r\"FT_TEST_SINGLE_DEMAND\"\n",
     "OUTPUT_DIR       = OUTPUT_DIR\n",
     "ITERATIONS       = 1\n",
@@ -382,7 +394,7 @@
    },
    "outputs": [],
    "source": [
-    "Run.run_fasttrips(input_network_dir    = INPUT_NETWORKS,\n",
+    "Run.run_fasttrips(input_network_dir= INPUT_NETWORKS,\n",
     "                  input_demand_dir = INPUT_DEMAND,\n",
     "                  run_config       = RUN_CONFIG,\n",
     "                  input_weights    = INPUT_WEIGHTS,\n",
@@ -427,7 +439,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
