Created mapping script

--- a/Tutorial #1 - Simple Network, Single Trip.ipynb
+++ b/Tutorial #1 - Simple Network, Single Trip.ipynb
@@ -42,8 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "BASE_DIR         = r\"PUT YOUR PATH TO THE TUTORIAL DIRECTORY HERE!\"\n",
-    "\n",
+    "BASE_DIR         = r\"/Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial\"\n",
     "INPUT_NETWORKS   = os.path.join(BASE_DIR, \"tta\",\"input\",\"network-simple\")\n",
     "INPUT_DEMAND     = os.path.join(BASE_DIR, \"tta\",\"input\",\"demand-single\")"
    ]
@@ -228,12 +227,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "OUTPUT_DIR    = os.path.join(BASE_DIR,\"tta\",\"output\")\n",
     "OUTPUT_FOLDER = \"test_simplenet_noOverlap\"\n",
+    "full_output_directory=os.path.join(OUTPUT_DIR,OUTPUT_FOLDER)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "Run.run_fasttrips(input_network_dir= INPUT_NETWORKS,\n",
     "                  input_demand_dir = INPUT_DEMAND,\n",
     "                  run_config       = RUN_CONFIG,\n",
@@ -267,7 +277,7 @@
    },
    "outputs": [],
    "source": [
-    "full_output_directory=os.path.join(OUTPUT_DIR,OUTPUT_FOLDER)\n",
+    "\n",
     "vehicles_df = pd.read_csv(os.path.join(full_output_directory,\"veh_trips.csv\"), \n",
     "                                       sep=\",\", \n",
     "                                       parse_dates=['arrival_time', 'departure_time'],\n",
@@ -388,26 +398,9 @@
     "from bokeh.models import ColumnDataSource, DataRange1d, Plot, LinearAxis, Grid,DatetimeAxis, LabelSet\n",
     "from bokeh.models.glyphs import Segment\n",
     "from bokeh.io import curdoc, show\n",
+    "from bokeh.layouts import row,column\n",
     "\n",
-    "mode2color = {'local_bus':\"#b3de69\",\n",
-    "             'walk_access':'#8dd3c7',\n",
-    "             'walk_egress':'#bebada',\n",
-    "             'transfer':'#fb8072',\n",
-    "             'other':'#80b1d3'}\n",
-    "\n",
-    "def assignColorByMode(mode):\n",
-    "    if mode in mode2color.keys():\n",
-    "        return mode2color[mode]\n",
-    "    return mode2color[\"other\"]\n",
-    "    \n",
-    "chosen_link_df[\"color\"]= map(assignColorByMode, chosen_link_df[\"mode\"])\n",
-    "\n",
-    "def createAnnotation(mode,sim_cost,route_id,trip_id):\n",
-    "    return str(mode)+\" \"+str(sim_cost)+\" \"+str(route_id)+\":\"+str(trip_id)\n",
-    "\n",
-    "chosen_link_df[\"annotation\"]= map(createAnnotation, chosen_link_df[\"mode\"],chosen_link_df[\"sim_cost\"],chosen_link_df[\"route_id\"],chosen_link_df[\"trip_id\"])\n",
-    "\n",
-    "source = ColumnDataSource(chosen_link_df)"
+    "import graphs_ft"
    ]
   },
   {
@@ -418,33 +411,8 @@
    },
    "outputs": [],
    "source": [
-    "xdr = DataRange1d()\n",
-    "ydr = DataRange1d()\n",
-    "\n",
-    "plot = Plot(\n",
-    "    title=None, x_range=xdr, y_range=ydr, plot_width=800, plot_height=300,\n",
-    "    h_symmetry=False, v_symmetry=False, min_border=0, toolbar_location=None)\n",
-    "\n",
-    "glyph = Segment(y0=\"linknum\", x0=\"new_A_time\", y1=\"linknum\", x1=\"new_B_time\", line_color=\"color\", line_width=\"sim_cost\")\n",
-    "plot.add_glyph(source, glyph)\n",
-    "\n",
-    "xaxis = DatetimeAxis()\n",
-    "plot.add_layout(xaxis, 'below')\n",
-    "\n",
-    "yaxis = LinearAxis()\n",
-    "plot.add_layout(yaxis, 'left')\n",
-    "\n",
-    "plot.add_layout(Grid(dimension=0, ticker=xaxis.ticker))\n",
-    "plot.add_layout(Grid(dimension=1, ticker=yaxis.ticker))\n",
-    "\n",
-    "mode_labels = LabelSet(x=\"new_A_time\", y=\"linknum\", text=\"mode\", y_offset=-5,x_offset=10,\n",
-    "                  text_font_size=\"8pt\", text_color=\"#555555\",\n",
-    "                  source=source, text_align='left')\n",
-    "plot.add_layout(mode_labels)\n",
-    "\n",
-    "curdoc().add_root(plot)\n",
-    "\n",
-    "show(plot, notebook_handle=True)"
+    "graphs_ft = reload(graphs_ft)\n",
+    "show(graphs_ft.plot_choiceset_links(chosen_link_df,cost=\"sim_cost\",paths=False),notebook_handle=True)"
    ]
   },
   {
@@ -517,7 +485,8 @@
     "                       right = pathset_paths_df,\n",
     "                       how   = \"left\",\n",
     "                       left_on = [\"person_id\",\"person_trip_id\",\"pathnum\",\"chosen\",\"missed_xfer\"],\n",
-    "                       right_on = [\"person_id\",\"person_trip_id\",\"pathnum\",\"chosen\",\"missed_xfer\"])\n",
+    "                       right_on = [\"person_id\",\"person_trip_id\",\"pathnum\",\"chosen\",\"missed_xfer\"],\n",
+    "                       suffixes = [\"_L\",\"_P\"])\n",
     "\n",
     "#linkfile_df.head()\n",
     "#linkfile_df.columns"
@@ -531,26 +500,8 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "maxlinknum = linkfile_df[\"linknum\"].max()\n",
-    "    \n",
-    "linkfile_df[\"color\"]= map(assignColorByMode, linkfile_df[\"mode\"])\n",
-    "\n",
-    "def createAnnotation(mode,sim_cost,route_id,trip_id,probability):\n",
-    "    if mode not in ['local_bus']:\n",
-    "        return str(mode)+\" \"+str(sim_cost)\n",
-    "    else:\n",
-    "        return str(mode)+\" \"+str(sim_cost)+\" \"+str(route_id)+\":\"+str(trip_id)\n",
-    "\n",
-    "linkfile_df[\"annotation\"]= map(createAnnotation, linkfile_df[\"mode\"],linkfile_df[\"sim_cost_x\"],linkfile_df[\"route_id\"],linkfile_df[\"trip_id\"],linkfile_df[\"probability\"])\n",
-    "\n",
-    "def yloc(pathnum,linknum):\n",
-    "    return (pathnum*(maxlinknum+1))+linknum\n",
-    "\n",
-    "linkfile_df[\"yloc\"]= map(yloc, linkfile_df[\"pathnum\"],linkfile_df[\"linknum\"])\n",
-    "\n",
-    "linksource = ColumnDataSource(linkfile_df)\n",
-    "#linkfile_df"
+    "graphs_ft = reload(graphs_ft)\n",
+    "show(graphs_ft.plot_choice_links(linkfile_df,cost=\"sim_cost_L\",paths=True),notebook_handle=True)"
    ]
   },
   {
@@ -561,35 +512,8 @@
    },
    "outputs": [],
    "source": [
-    "xdr2 = DataRange1d()\n",
-    "ydr2 = DataRange1d()\n",
-    "\n",
-    "choiceplot = Plot(\n",
-    "    title=None, x_range=xdr2, y_range=ydr2, plot_width=800, plot_height=300,\n",
-    "    h_symmetry=False, v_symmetry=False, min_border=0, toolbar_location=None)\n",
-    "\n",
-    "glyph = Segment(y0=\"yloc\", x0=\"new_A_time\", y1=\"yloc\", x1=\"new_B_time\", line_color=\"color\", line_width=\"sim_cost_x\")\n",
-    "choiceplot.add_glyph(linksource, glyph)\n",
-    "\n",
-    "choicexaxis = DatetimeAxis()\n",
-    "choiceplot.add_layout(choicexaxis, 'below')\n",
-    "\n",
-    "choiceplot.add_layout(Grid(dimension=0, ticker=xaxis.ticker))\n",
-    "choiceplot.add_layout(Grid(dimension=1, ticker=yaxis.ticker))\n",
-    "\n",
-    "choice_labels = LabelSet(x=\"new_A_time\", y=\"yloc\", text=\"annotation\", y_offset=-5,x_offset=10,\n",
-    "                  text_font_size=\"8pt\", text_color=\"#555555\",\n",
-    "                  source=linksource, text_align='left')\n",
-    "choiceplot.add_layout(choice_labels)\n",
-    "\n",
-    "curdoc().add_root(choiceplot)\n",
-    "\n",
-    "##TODO add nodes\n",
-    "##TODO standardize colors by mode\n",
-    "##TODO add probability\n",
-    "##TODO make each path start at a grid line so you can evaluate cost easier\n",
-    "\n",
-    "show(choiceplot, notebook_handle=True)"
+    "graphs_ft = reload(graphs_ft)\n",
+    "show(column(graphs_ft.plot_choiceset_links(linkfile_df,cost=\"sim_cost_L\",paths=True)),notebook_handle=True)"
    ]
   },
   {
@@ -598,10 +522,10 @@
     "collapsed": true
    },
    "source": [
-    "## QUESTION\n",
+    "# QUESTIONS\n",
     "**Question 1a:** What is the best route according to Tuffie?\n",
     "\n",
-    "**Question 1b:** What drives it being the best?"
+    "**Question 1b:** Why? What drives it being the best?"
    ]
   },
   {
