Update tutorial 1 to use seaborn rather than bokeh so that it is less ornery

--- a/Tutorial #1 - Simple Network, Single Trip.ipynb
+++ b/Tutorial #1 - Simple Network, Single Trip.ipynb
@@ -42,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "BASE_DIR         = r\"/Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial\"\n",
+    "BASE_DIR         = r\"PUT YOUR PATH TO TUTORIAL HERE\"\n",
     "INPUT_NETWORKS   = os.path.join(BASE_DIR, \"tta\",\"input\",\"network-simple\")\n",
     "INPUT_DEMAND     = os.path.join(BASE_DIR, \"tta\",\"input\",\"demand-single\")"
    ]
@@ -344,31 +344,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "We use [`Bokeh`](http://bokeh.pydata.org/) to examine the results.  Bokeh is a python wrapper on the popular [`D3.js`](https://d3js.org/).  \n",
-    "\n",
-    "**Tip**: Sometimes Bokeh is ornery and doesn't play nice.  Usually re-importing it using command below will do the trick."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from bokeh.charts import Bar, Histogram, TimeSeries, output_file, Line\n",
-    "from bokeh.models import ColumnDataSource\n",
-    "from bokeh.io import push_notebook, show, output_notebook\n",
-    "from bokeh.plotting import figure\n",
-    "output_notebook()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -393,13 +368,6 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "from bokeh.models import ColumnDataSource, DataRange1d, Plot, LinearAxis, Grid,DatetimeAxis, LabelSet\n",
-    "from bokeh.models.glyphs import Segment\n",
-    "from bokeh.io import curdoc, show\n",
-    "from bokeh.layouts import row,column\n",
-    "\n",
     "import graphs_ft"
    ]
   },
@@ -412,7 +380,7 @@
    "outputs": [],
    "source": [
     "graphs_ft = reload(graphs_ft)\n",
-    "show(graphs_ft.plot_choiceset_links(chosen_link_df,cost=\"sim_cost\",paths=False),notebook_handle=True)"
+    "graphs_ft.path_link_cost_single_pax(chosen_link_df,pax=\"Tuffie\",value=\"sim_cost\")"
    ]
   },
   {
@@ -484,11 +452,11 @@
     "linkfile_df = pd.merge(left  = linkfile_df,\n",
     "                       right = pathset_paths_df,\n",
     "                       how   = \"left\",\n",
-    "                       left_on = [\"person_id\",\"person_trip_id\",\"pathnum\",\"chosen\",\"missed_xfer\"],\n",
-    "                       right_on = [\"person_id\",\"person_trip_id\",\"pathnum\",\"chosen\",\"missed_xfer\"],\n",
+    "                       left_on = [\"person_id\",\"person_trip_id\",\"pathnum\",\"chosen\",\"missed_xfer\",\"iteration\",\"pathfinding_iteration\",\"simulation_iteration\"],\n",
+    "                       right_on = [\"person_id\",\"person_trip_id\",\"pathnum\",\"chosen\",\"missed_xfer\",\"iteration\",\"pathfinding_iteration\",\"simulation_iteration\"],\n",
     "                       suffixes = [\"_L\",\"_P\"])\n",
     "\n",
-    "#linkfile_df.head()\n",
+    "linkfile_df\n",
     "#linkfile_df.columns"
    ]
   },
@@ -501,19 +469,7 @@
    "outputs": [],
    "source": [
     "graphs_ft = reload(graphs_ft)\n",
-    "show(graphs_ft.plot_choice_links(linkfile_df,cost=\"sim_cost_L\",paths=True),notebook_handle=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "graphs_ft = reload(graphs_ft)\n",
-    "show(column(graphs_ft.plot_choiceset_links(linkfile_df,cost=\"sim_cost_L\",paths=True)),notebook_handle=True)"
+    "graphs_ft.path_choice_single_pax(linkfile_df,pax=\"Tuffie\",value=\"sim_cost_L\")"
    ]
   },
   {
