Add graph at end

--- a/Tutorial #2 - Capacity Constraint and Iterations.ipynb
+++ b/Tutorial #2 - Capacity Constraint and Iterations.ipynb
@@ -256,6 +256,7 @@
    "outputs": [],
    "source": [
     "pathset_paths_df = pd.read_csv(os.path.join(OUTPUT_DIR,OUTPUT_FOLDER,\"pathset_paths.csv\"), sep=\",\")\n",
+    "pathset_paths_df = pathset_paths_df[pathset_paths_df[\"simulation_iteration\"]==1] #only want to look at the actual simulation iteration\n",
     "pd.set_option('display.max_colwidth',160) #widen so you can see whole description"
    ]
   },
@@ -267,7 +268,7 @@
    },
    "outputs": [],
    "source": [
-    "mswuf = pathset_paths_df[pathset_paths_df['person_id']=='Mrs. Wuf']\n",
+    "mswuf = pathset_paths_df[(pathset_paths_df['person_id']=='Mrs. Wuf')]\n",
     "mswuf[['person_id','iteration','pathfinding_iteration','simulation_iteration','pathnum','probability','chosen','description']]"
    ]
   },
@@ -292,7 +293,7 @@
    },
    "outputs": [],
    "source": [
-    "carlos = pathset_paths_df[pathset_paths_df['person_id']=='Carlos Boozer']\n",
+    "carlos = pathset_paths_df[(pathset_paths_df['person_id']=='Carlos Boozer')]\n",
     "carlos[['person_id','iteration','pathfinding_iteration','simulation_iteration','pathnum','probability','chosen','description']]"
    ]
   },
@@ -312,11 +313,11 @@
    },
    "outputs": [],
    "source": [
-    "rejected_persons_df = pathset_paths_df[pathset_paths_df['chosen']=='rejected']\n",
+    "rejected_persons_df = pathset_paths_df[(pathset_paths_df['chosen']=='rejected')]\n",
     "rejected_persons_df = rejected_persons_df[['person_id']].drop_duplicates()\n",
     "\n",
     "rejected_persons_paths_df = pd.merge(pathset_paths_df, rejected_persons_df, on=['person_id'])\n",
-    "rejected_persons_paths_df[['person_id','iteration','pathfinding_iteration','simulation_iteration','pathnum','probability','chosen','description']]"
+    "rejected_persons_paths_df[['person_id','iteration','pathfinding_iteration','pathnum','probability','chosen','description']]"
    ]
   },
   {
@@ -325,7 +326,9 @@
    "source": [
     "## QUESTION\n",
     "\n",
-    "**Question 3-A** Who didn't make the trip by the end of iteration 3?\n"
+    "**Question 2-A** Who didn't make the trip by the end of iteration 3?\n",
+    "\n",
+    "**Question 2-B** What is updating for each pathfinding vs. global iteration?"
    ]
   },
   {
@@ -412,14 +415,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pathset_paths_df = pd.read_csv(os.path.join(OUTPUT_DIR,OUTPUT_FOLDER,\"pathset_paths.csv\"), sep=\",\")\n",
+    "pathset_paths_df = pathset_paths_df[pathset_paths_df[\"simulation_iteration\"]==1] #only want to look at the actual simulation iteration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import graphs_ft\n",
+    "graphs_ft.choice_set_facet_plot_single_pax(pathset_paths_df,pax=\"Mrs. Wuf\",value=\"sim_cost\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## QUESTIONS\n",
     "\n",
-    "**Question 3-B** How would you measure the cost of crowding in the scenarios both before and after adding the \"orange express\"?\n",
-    "\n",
-    "**Question 3-C** What is the cost of crowding with the orange line?"
+    "**Question 2-C** What is the new preferred route by most of the travellers?\n"
    ]
   },
   {
