Remove user specific pathing in the tutorials.

--- a/Tutorial #3 - User Classes.ipynb
+++ b/Tutorial #3 - User Classes.ipynb
@@ -18,8 +18,8 @@
     "import os,datetime\n",
     "import pandas as pd\n",
     "\n",
-    "BASE_DIR         = r\"PUT YOUR PATH TO THE TUTORIAL HERE\"\n",
-    "BASE_DIR         = r\"/Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial\""
+    "##REPLACE THIS WITH THE PLACE YOUR TTA FOLDER IS\n",
+    "BASE_DIR         = r\"PUT YOUR PATH TO THE TUTORIAL HERE\""
    ]
   },
   {
