Remove user specific pathing in the tutorials. Also add consistent pathing with the other tutorials.

--- a/Tutorial #5 - Overlap and Dispersion.ipynb
+++ b/Tutorial #5 - Overlap and Dispersion.ipynb
@@ -38,9 +38,9 @@
    "outputs": [],
    "source": [
     "### REPLACE THIS WITH YOUR OWN DIRECTORY\n",
-    "BASE_DIR         = r\"/Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta\"\n",
-    "INPUT_NETWORKS   = os.path.join(BASE_DIR, \"input\",\"network-simple\")\n",
-    "INPUT_DEMAND     = os.path.join(BASE_DIR, \"input\",\"demand-single\")"
+    "BASE_DIR         = r\"YOUR PATH TO THE TUTORIAL DIRECTORY\"\n",
+    "INPUT_NETWORKS   = os.path.join(BASE_DIR,\"tta\",\"input\",\"network-simple\")\n",
+    "INPUT_DEMAND     = os.path.join(BASE_DIR,\"tta\",\"input\",\"demand-single\")"
    ]
   },
   {
@@ -59,9 +59,9 @@
    },
    "outputs": [],
    "source": [
-    "INPUT_WEIGHTS      = os.path.join(BASE_DIR,\"input\",\"demand-single\",\"pathweight_ft.txt\")\n",
-    "RUN_CONFIG         = os.path.join(BASE_DIR,\"input\",\"demand-single\",\"config_ft.txt\")\n",
-    "OUTPUT_DIR         = os.path.join(BASE_DIR,\"output\")\n",
+    "INPUT_WEIGHTS      = os.path.join(BASE_DIR,\"tta\",\"input\",\"demand-single\",\"pathweight_ft.txt\")\n",
+    "RUN_CONFIG         = os.path.join(BASE_DIR,\"tta\",\"input\",\"demand-single\",\"config_ft.txt\")\n",
+    "OUTPUT_DIR         = os.path.join(BASE_DIR,\"tta\",\"output\")\n",
     "ITERATIONS         = 1\n",
     "PATHFINDING_TYPE   = \"stochastic\"\n",
     "OVERLAP            = \"None\"\n",
@@ -172,9 +172,9 @@
    },
    "outputs": [],
    "source": [
-    "INPUT_WEIGHTS      = os.path.join(BASE_DIR, \"input\", \"demand-single\", \"pathweight_ft.txt\")\n",
-    "RUN_CONFIG         = os.path.join(BASE_DIR,\"input\", \"demand-single\", \"config_ft.txt\")\n",
-    "OUTPUT_DIR         = os.path.join(BASE_DIR,\"output\")\n",
+    "INPUT_WEIGHTS      = os.path.join(BASE_DIR,\"tta\", \"input\", \"demand-single\", \"pathweight_ft.txt\")\n",
+    "RUN_CONFIG         = os.path.join(BASE_DIR,\"tta\",\"input\", \"demand-single\", \"config_ft.txt\")\n",
+    "OUTPUT_DIR         = os.path.join(BASE_DIR,\"tta\",\"output\")\n",
     "ITERATIONS       = 1\n",
     "PATHFINDING_TYPE = \"stochastic\"\n",
     "DISPERSION       = 0.50\n",
