Output visualization to the screen.

--- a/Tutorial #4 - Create Your Own.ipynb
+++ b/Tutorial #4 - Create Your Own.ipynb
@@ -515,7 +515,7 @@
     "all_lines  = Bar(final_vehicles_df, \"route_id\", values='boards', stack='trip_id',title=\"Boardings by Route\",legend=False,\n",
     "            xlabel=\"Route ID\", ylabel=\"Boardings\",tooltips=tooltips)\n",
     "\n",
-    "ridership = show(all_lines, notebook_handle=True)"
+    "show(all_lines, notebook_handle=True)"
    ]
   },
   {
