Remove user specific pathing in the tutorials.

--- a/Tutorial #4 - Create Your Own.ipynb
+++ b/Tutorial #4 - Create Your Own.ipynb
@@ -34,11 +34,12 @@
    },
    "outputs": [],
    "source": [
-    "GTFS_LINK  = r\"http://admin.gotransitnc.org/sites/default/files/developergtfs/GoRaleigh_GTFS_0.zip\"\n",
+    "GTFS_LINK        = r\"http://admin.gotransitnc.org/sites/default/files/developergtfs/GoRaleigh_GTFS_0.zip\"\n",
     "\n",
-    "BASE_DIR   = r\"C:\\Users\\lzorn\\Documents\\fast-trips-tutorial\"\n",
-    "NEW_FOLDER = \"GoRaleigh_GTFS\"\n",
-    "GTFS_LOC   = os.path.join(BASE_DIR,NEW_FOLDER)"
+    "### REPLACE THIS WITH YOUR OWN DIRECTORY\n",
+    "BASE_DIR         = r\"YOUR PATH TO THE TUTORIAL DIRECTORY\"\n",
+    "NEW_FOLDER       = \"GoRaleigh_GTFS\"\n",
+    "GTFS_LOC         = os.path.join(BASE_DIR,NEW_FOLDER)"
    ]
   },
   {
